# alarm

./: .gitignore  README.md  manifest.json  popup.html  popup.js  trading-calculator.html
.trae/documents/: 创建 Telegram 日志监控项目.md
btc-price-monitor-rust/: Cargo.toml  config.toml
btc-price-monitor-rust/src/: main.rs
chrome-email-plugin/: README.md  manifest.json  popup.html  popup.js
crypto-volume-analysis/: Cargo.toml
crypto-volume-analysis/src/: main.rs
email-alert/: .env.example  Cargo.toml
email-alert/src/: config.rs  email.rs  error.rs  lib.rs  main.rs
telegram-log-monitor/: Cargo.toml
telegram-log-monitor/src/: main.rs
