[package]
name = "email-alert"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
actix-web = "4.8"

# Email sending
lettre = { version = "0.11", features = ["smtp-transport", "tokio1-native-tls"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Configuration
dotenvy = "0.15"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
